# retro

./: .gitignore  AGENTS.md  CONTRIBUTORS.md  README.md  REVIEW.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml  publish.yml
dashboard/: README.md  build_dashboard.py  build_trajectory_experiments.py  trajectory_experiments.html
dashboard/pricing/: litellm-pricing.json  refresh.py
docs/: _config.yml  architecture.md  cli.md  contributing.md  dashboard.md  guides.md  index.md  memory-backend.md  onboarding.md  roadmap.md
specs/: agent_rollout_memory_landscape.md  agent_rollout_memory_project.md  ccusage_comparison_spec.md  durable_rollout_capture_spec.md  experimental_trajectory_signals_spec.md  full_rollout_capture_feature_spec.md  memory_storage_backend_spec.md  rollout_dashboard_spec.md  rollout_mining_methods.md  rollout_signals_spec.md  self_evolving_memory_generation_spec.md
src/retro/: __init__.py  analyzer.py  cli.py  dashboard_build.py  dashboard_experiments.py  dashboard_terminal.py  llm.py  memory_store.py  quest.py  renderer.py  schema.py  sft.py  storage.py  trajectory.py  utils.py
src/retro/importers/: __init__.py  base.py  claude.py  codex.py
src/retro/mining/: __init__.py  base.py  render.py
src/retro/mining/docs/: new_methods_batch1.md
src/retro/mining/filters/: __init__.py  risk_aware.py
src/retro/mining/methods/: __init__.py  codex_headless.py  memp_procedural.py  reme_refine.py  skill_pro.py
src/retro/pricing/: litellm-pricing.json
src/retro/signals/: __init__.py  base.py  external.py  heuristics.py  runner.py  trajectory.py
tests/: conftest.py  test_analyzer.py  test_cli.py  test_dashboard_build.py  test_dashboard_terminal.py  test_heatmap.py  test_importers.py  test_memory_store.py  test_mining.py  test_quest.py  test_schema.py  test_sft.py  test_signals.py  test_storage.py  test_trajectory_signals.py  test_utils.py
tests/fixtures/: claude_transcript.jsonl  codex_rollout.jsonl
