[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "retro-agent-memory"
version = "0.1.0"
description = "Capture, analyze, and mine Codex / Claude Code rollouts into durable local memory."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "rich>=13",
]

[project.scripts]
retro = "retro.cli:app"

[project.urls]
Homepage = "https://github.com/sajjadGG/retro"
Repository = "https://github.com/sajjadGG/retro"
Issues = "https://github.com/sajjadGG/retro/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/retro"]
