[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "retro-agent-memory"
version = "0.1.0"
description = "Capture, analyze, and mine Codex / Claude Code rollouts into durable local memory."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "rich>=13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "mypy>=1.10",
    "ruff>=0.4",
]

[project.scripts]
retro = "retro.cli:app"

[project.urls]
Homepage = "https://github.com/sajjadGG/retro"
Repository = "https://github.com/sajjadGG/retro"
Issues = "https://github.com/sajjadGG/retro/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/retro"]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "dashboard.*,dashboard,dashboard.build_dashboard"
ignore_errors = true

[[tool.mypy.overrides]]
module = ["retro.importers.*"]
disable_error_code = ["arg-type"]

[[tool.mypy.overrides]]
module = ["retro.cli"]
disable_error_code = ["arg-type"]

[tool.ruff]
target-version = "py310"
line-length = 110

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"dashboard/build_dashboard.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
